idea/testData/multiModuleHighlighting/platform1/header/header.kt
platform class <error descr="[PLATFORM_DECLARATION_WITHOUT_DEFINITION] Declaration 'My' has no definition in platform module for JVM">My</error> {

}